[project]
name = "iotsim"
version = "1.0.0"
description = "IoT Device Simulator for developing and testing downstream logic relying on IoT physical devices"
authors = [{ name = "Michelangelo Setaro", email = "mksetaro@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "GPL3" }
dependencies = [
    "paho-mqtt>=2.1.0",
    "apscheduler>=3.11.2",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
]

[project.scripts]
iotsim = "iotsim.main:main"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=4.1.0", "ruff>=0.14.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iotsim"]

[tool.hatch.build]
include = ["iotsim/**/*.py", "iotsim/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*_test.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = [
    "--import-mode=importlib",
    # "--cov=iotsim",
    # "--cov-report=term-missing",
]
